add two time to the video tool

--- a/test.ipynb
+++ b/test.ipynb
@@ -170,10 +170,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['18:50.0', '19:01.3']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = 'LPSBS 18:50.0 19:00.4 19:01.3'\n",
+    "time_list = string.split(' ')[1:]\n",
+    "if len(time_list)>1:\n",
+    "    time_list = [time_list[0],time_list[-1]]\n",
+    "\n",
+    "time_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Video'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "yourpath = '/Users/linshan/Desktop/Video'\n",
+    "os.path.split(yourpath)[-1]"
+   ]
   }
  ],
  "metadata": {
